--- a/题目描述.md
+++ b/题目描述.md
@@ -31,7 +31,7 @@
 同样可以用Backus-Naur Form来定义它的文法:
 ```
 <expression> ::= <name> | <function> | <application> | <number>
-<function> ::= \<name>.<body>
+<function> ::= \<name>.<application>
 <application> ::= (<expression> <expression>)
 <number> ::= 0 | 1 | 2 | 3 | 4 | 5 | 6 | 7 | 8 | 9
 ```
